--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <h1>Welcome to my portofolio </h1>
+<div class="container" >
+
+</div>
 </body>
 </html>
