add a href link

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <h4><li><a href="#">Portfolio</a></li></h4>
                 <h4><li><a href="#">Services</a></li></h4>
                 <h4><li><a href="#">Pages</a></li></h4>                 
-                <h4><li><a href="#">Contact</a></li></h4>
+                <h4><li><a href="#">Contacts</a></li></h4>
             </ul>
         </nav>
     </div>
