--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav>
             <ul>
                <h4> <li><a href= "#">Home</a></li></h4>
-               <h4><li><a href="#">About</a></li></h4>>
+               <h4><li><a href="#">About Us</a></li></h4>
                 <h4><li><a href="#">Portfolio</a></li></h4>
                 <h4><li><a href="#">Services</a></li></h4>
                 <h4><li><a href="#">Pages</a></li></h4>                 
