--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
 <div class="navbar">
     <div transparent>
         <nav>
-            <ul>
-               <h4> <li><a href= "#">Home</a></li></h4>
-               <h4><li><a href="#">About Us</a></li></h4>
-                <h4><li><a href="#">Portfolio</a></li></h4>
-                <h4><li><a href="#">Services</a></li></h4>
-                <h4><li><a href="#">Pages</a></li></h4>                 
-                <h4><li><a href="#">Contacts</a></li></h4>
+            <ul><li>
+               <h4> <a href= "#">Home</a></h4>
+               <h4><a href="#">About Us</a></h4>
+                <h4><a href="#">Portfolio</a></h4>
+                <h4><a href="#">Services</a></h4>
+                <h4><a href="#">Pages</a></h4>                 
+                <h4><a href="#">Contacts</a></h4>
+            </li>
             </ul>
         </nav>
     </div>
