--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div transparent>
         <nav>
             <ul><li>
+                <h4> <img src="https://www.seekpng.com/png/small/45-453153_student-lady-laptop-svg-student-with-laptop-icon.png" width="10%" height="8%"> FrancineU</h4> 
                <h4> <a href= "#">Home</a></h4>
                <h4><a href="#">About Us</a></h4>
                 <h4><a href="#">Portfolio</a></h4>
@@ -24,6 +25,9 @@
             </ul>
         </nav>
     </div>
+</div>
+<div class="content">
+     <p><p>
 </div>
 </body>
 </html>
