--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div transparent>
         <nav>
             <ul><li>
-                <h4> <img src="https://www.seekpng.com/png/small/45-453153_student-lady-laptop-svg-student-with-laptop-icon.png" width="10%" height="8%"> FrancineU</h4> 
+                <h3> FrancineU</h3> 
                <h4> <a href= "#">Home</a></h4>
                <h4><a href="#">About Us</a></h4>
                 <h4><a href="#">Portfolio</a></h4>
@@ -27,7 +27,22 @@
     </div>
 </div>
 <div class="content">
-     <p><p>
+     <p>
+         I am self enthusiam to pursue programming and any re
+         lated field in coding as <span> i would like to encourage young
+            adults especially girls that we are able to work and give our 
+            effort in IT related fields.</span> 
+        </p>
+            <p>
+                I have almost 3 years of experience in programming,
+                and am still taking my IT courses at Moringa School and AUCA 
+                where am earnin the superb skills.
+
+                I am very committed to do anything that will enable me 
+                to get more skills in IT as a result to earn more knowledge.
+                
+            </p>
+     
 </div>
 </body>
 </html>
