--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
  <h3>School background</h3>
  <p>My name is Uwizeyimana Francine from AUCA,<br>I went to sos primary School then <span> <br>follow to  SOS technical High School and <br>
     now I'm at AUCA.   </p>
- <h3> Encouragement </h3>
+ <h3> Encouragement.</h3>
  <p>
     I am self enthusiam to pursue programming <br> and any related 
     field in coding as  i would like <br> to encourage young
